syntax = "proto3";

package PhysicsTelemetry;

import "base_types.proto";

option csharp_namespace = "Physics.Telemetry.Serialised";

message RigidBody
{
	uint32 id = 1;

	PhysicsTelemetry.Matrix4x4 position = 2;
	PhysicsTelemetry.Vector4 velocity = 3;
}

message RigidBodyList
{
	repeated RigidBody rigidBodies = 1;
}